<resources>
    <string name="app_name">Koffe</string>
    <string name="search_anything">Busca tu cafe...</string>
    <string name="good_morning">Buenos dias</string>
    <string name="get_started">Bienvenido</string>
    <string name="find_the_best_coffee_nfor_you">Busca el mejor cafe para ti</string>
    <string name="started">Iniciar</string>
    <string name="grab_your_first_coffee_in_this_morning">Inicia tus mañanas con un rico cafe!!</string>
    <string name="popular">Popular</string>
    <string name="see_all">Ver mas</string>
    <string name="available_offers">En oferta</string>
    <string name="cart">Carrito</string>
    <string name="correo_electronico">correo</string>
    <string name="contrase_a">contraseña</string>
    <string name="autenticar">autenticar</string>
    <string name="registrar">registrar</string>
    <string name="no_tienes_una_cuenta">no tienes una cuenta</string>
    <string name="Koffe">Koffe</string>
    <string name="nombre">nombre</string>
    <string name="ya_posees_una_cuenta">ya posees una cuenta</string>
    <string name="ingresar">ingresar</string>
</resources>