<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/lightyellow">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Koffe"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:background="@color/orange"
        android:padding="8dp"/>

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/correo_electronico"
        android:inputType="textEmailAddress"
        android:textColor="@color/darkBrown"
        android:textColorHint="@color/grey"
        android:backgroundTint="@color/orange"/>

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contrase_a"
        android:inputType="textPassword"
        android:layout_marginTop="8dp"
        android:textColor="@color/darkBrown"
        android:textColorHint="@color/grey"
        android:backgroundTint="@color/orange"/>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/autenticar"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/orange"
        android:textColor="@color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_tienes_una_cuenta"
            android:textColor="@color/darkGrey"/>

        <TextView
            android:id="@+id/registerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registrar"
            android:textColor="@color/orange"
            android:layout_marginStart="8dp"/>
    </LinearLayout>
</LinearLayout>